preflight/impl/tests/ui/fail-arguments.stderr
error: unexpected parameter(s): arg
  --> $DIR/fail-arguments.rs:12:1
   |
12 | #[avionics_harness(default = "Controller::new", arg = "ument")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-arguments.rs:1:40
  |
1 | use preflight_impl::{avionics_harness, Avionics, Control, Sensors};
  |                                        ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
